- added base classes - fix gitignore

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,14 @@
 cmake_minimum_required(VERSION 3.23)
-project(idealNN CUDA)
+project(idealNN)
+#project(idealNN CUDA)
 
 set(CMAKE_CUDA_STANDARD 17)
 
 add_executable(
     idealNN
-        main.cu
-)
+        src/main.cpp
+        src/layers/layer.cpp src/layers/layer.hpp src/sequential.cpp src/sequential.hpp)
+
 
 set_target_properties(
     idealNN
