- stub backprop on loss - subs of activations

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,7 +48,7 @@ add_library(
         src/Utils.cpp
         src/Loss/MSELoss.cpp
         src/Loss/MSELoss.h
-        src/Loss/Loss.h)
+        src/Loss/Loss.h src/Optimizer/Optimizer.h src/Optimizer/SDGOptimizer.cpp src/Optimizer/SDGOptimizer.h src/Activation/Activation.h src/Activation/SigmoidActivation.cpp src/Activation/SigmoidActivation.h src/Activation/RELUActivation.cpp src/Activation/RELUActivation.h)
 
 
 find_package (Eigen3 REQUIRED)
@@ -61,10 +61,7 @@ add_executable(
     idealNN_test
         EXCLUDE_FROM_ALL
         third_party/catch2/catch.hpp
-        test/main_test.cpp
-        test/csvloader_test.cpp
-        test/forward_test.cpp
-        test/loss_test.cpp
+        ${SOURCES_TEST}
 )
 target_link_libraries(idealNN_test idealNN)
 
