--- a/.github/workflows/doxygen.yml
+++ b/.github/workflows/doxygen.yml
@@ -25,6 +25,8 @@ jobs:
     steps:
       - name: Install Doxygen
         run: sudo apt-get update && sudo apt-get install -y doxygen texlive-font-utils graphviz
+      - name: Install Project Dependencies
+        run: sudo apt-get update && sudo apt-get install -y libeigen3-dev
     
       - name: Checkout
         uses: actions/checkout@v3
