--- a/.github/workflows/doxygen.yml
+++ b/.github/workflows/doxygen.yml
@@ -24,7 +24,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Install Doxygen
-        run: sudo apt-get update && sudo apt-get install -y doxygen texlive-font-utils graphviz
+        run: sudo apt-get update && sudo apt-get install -y doxygen texlive-font-utils graphviz texlive
       - name: Install Project Dependencies
         run: sudo apt-get update && sudo apt-get install -y libeigen3-dev
     
