- cmakelist: exclude coverage for .h - dataloader: added seed init for shuffle - dataloader: replaced assert with catchable runtime_error - utils: cleanup imports remove include guards (bad copy-paste?) - utils: deduplicated code - utils: replaced asserts with catchable runtime_error - utils: refactoring of MakeTensorData - tensor: cleanup constructors - tests: replaced abs path with rel paths

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -155,6 +155,7 @@ if (TEST_COVERAGE)
             --root ${PROJECT_SOURCE_DIR}
             --exclude ${PROJECT_SOURCE_DIR}/test/
             --exclude ${PROJECT_SOURCE_DIR}/third_party/
+            --exclude ".*.h"
             -v
             --html --html-details coverage/coverage.html
             COMMENT "Generating code coverage"
